syntax = "proto3";

package yayuki.heartrate.net.protobuf;

message PatientExtra {
    string address = 1;
    string carer_name = 2;
    string carer_phone = 3;
}

message State {
    int32 id = 1;
    int32 heart_rate = 2;
    float accuracy = 3;
    double latitude = 4;
    double longitude = 5;
}